fix: html default title

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shop Simples</title>
+    <title>S-Shop</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para ver essa página.</noscript>
